--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
         <figure class="tile"><img src="rei.png" alt=""><a href="#img11"></a></figure>
         <figure class="tile"><img src="roja.jpg" alt=""><a href="#img12"></a></figure>
         <figure class="tile"><img src="gapin.png" alt=""><a href="#img13"></a></figure>
+        <figure class="tile"><img src="gipaw.jpg" alt=""><a href="#img14"></a></figure>
       </div>
     </section>
   </div>
@@ -183,7 +184,7 @@
   <div id="img11" class="lightbox"><a class="close" href="#">✕</a><img src="rei.png" alt=""></div>
   <div id="img12" class="lightbox"><a class="close" href="#">✕</a><img src="roja.jpg" alt=""></div>
   <div id="img13" class="lightbox"><a class="close" href="#">✕</a><img src="gapin.png" alt=""></div>
-
+  <div id="img14" class="lightbox"><a class="close" href="#">✕</a><img src="gipaw.png" alt=""></div>
 <script>
   // ===== Carousel logic =====
   let current = 1;
@@ -209,4 +210,3 @@
 </script>
 </body>
 </html>
-
